# SceneGraph

./: .clang-tidy  LICENSE  README.md
.github/workflows/: gcc_msvc.yml
diagrams/: class diagram.drawio  class diagram.md  dataFlowClients.drawio
documentation/: valgrind_report.txt
documentation/diagrams/: class diagram.md
start/: CMakeLists.txt
start/Client/: CMakeLists.txt
start/Client/include/: Client.h
start/Client/src/: Client.cpp
start/Client/tests/: CMakeLists.txt  Client_tests.cpp
start/SceneGraph/: CMakeLists.txt
start/SceneGraph/include/: SceneGraph.h
start/SceneGraph/src/: SceneGraph.cpp
start/SceneGraph/tests/: CMakeLists.txt
start/SceneNode/: CMakeLists.txt
start/SceneNode/include/: SceneNode.h  SquareMatrix.hpp
start/SceneNode/src/: SceneNode.cpp
start/SceneNode/tests/: CMakeLists.txt  SceneNode_tests.cpp
start/main/: CMakeLists.txt  main.cpp
start/scripts/: create_package.bat  create_package.sh
